Import chapter 1 and get katex working

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "d3": "~3.5.17",
     "underscore": "~1.8.3",
     "jquery": "~2.2.3",
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "KaTeX": "katex#^0.6.0"
   }
 }
