--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
+# Site settings
+title: Probabilistic Models of Cognition v. 2
+baseurl: ""
+url: "http://marielajennings.github.io/probmods2/"
+
+# Build settings
 markdown: kramdown
+
+exclude:
+- node_modules
