--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Probabilistic Models of Cognition v. 2
-baseurl: "/probmods2/"
+baseurl: "/probmods2"
 url: "http://marielajennings.github.io/probmods2/"
 
 # Build settings
