--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Probabilistic Models of Cognition v. 2
-baseurl: "/probmods2"
-url: "http://marielajennings.github.io/probmods2/"
+baseurl: ""
+url: "http://probmods.org"
 
 # Build settings
 markdown: kramdown
