Revert "possibly fix _config.yml. will need to merg PR before I know if this is right"
This reverts commit 84687a95bc29a1e2e2232a70f9702e1dccb39591.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Probabilistic Models of Cognition v. 2
-baseurl: ""
-url: "http://probmods.org"
+baseurl: "/probmods2"
+url: "http://marielajennings.github.io/probmods2/"
 
 # Build settings
 markdown: kramdown
